# zdk

./: .clang-format  .gitignore  .gitmodules  .rules  404.html  C.g4  CMakeLists.txt  README.md  TOOLCHAIN.md  a.out  index.html  init.s  link.ld  mkdocs.yml  sitemap.xml  test.c  test.s
.github/: copilot-agent-config.yml  copilot-instructions.md
.github/instructions/: cc.instructions.md  docs.instructions.md  project.instructions.md
.github/workflows/: copilot-setup-steps.yml  deploy-docs.yml  docs.yml
.zed/: debug.json  tasks.json
3rd/: CMakeLists.txt
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
_codeql_build_dir/cc/: CTestTestfile.cmake  Makefile  cc  cmake_install.cmake
_codeql_build_dir/cc1/: CTestTestfile.cmake  Makefile  cc1  cmake_install.cmake
_codeql_build_dir/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
abi/: index.html
as/: CMakeLists.txt  README.md
as/include/: section.h  symbol.h  symref.h  symtab.h
as/src/: main.c  section.c  symbol.c  symref.c  symtab.c
calling-convention/: index.html
cc/: C.g4  CMakeLists.txt  README.md  analyzer.cpp  ast_builder.cpp  ast_emitter.cpp  ast_visitor.cpp  codegen.cpp  ir_emitter.cpp  main.cpp  mksysroot.sh
cc/include/: analyzer.hpp  ast.h  ast.hpp  ast_builder.hpp  ast_visitor.hpp  codegen.hpp  diagnostics.h  errorreport.h  ir_emitter.hpp  ivisitor.hpp  lexer.h  parser.h  sema.h  symbols.h  target.h  token.h  types.h
cc/src/: analyzer.cpp  ast.c  cc.c  codegen.c  codegen.cpp  diagnostics.c  driver_util.c  driver_util.h  errorreport.c  ivisitor.cpp  lexer.c  lexer.l  main.c  main.cpp  parser.c  parser.h  parser.tab.c  parser.tab.h  parser.y  sema.c  symbols.c  target.c  target_z80.c  y.tab.c  y.tab.h
cc1/: CMakeLists.txt  README.md
cc1/include/: ast.hpp  codegen.h  codegen.hpp  codegen_driver.h  compilation_ctx.h  diagnostic.h  lexer.h  lexer.hpp  parser.h  parser.hpp  queue.h  string_pool.h  token.h  token.hpp
cc1/include/cc1/: diag.h  emit.h  lexer.h  parse.h  strpool.h  sym.h  type.h  z80_cg.h
cc1/reference/: README.md
cc1/src/: codegen.c  codegen_driver.c  compilation_ctx.c  diag.c  diagnostic.c  emit.c  lexer.c  lexer.cpp  main.c  main.cpp  parse.c  parser.c  queue.c  string_pool.c  strpool.c  sym.c  token.c  type.c  z80_cg.c
cc1/src/ast/: ast.cpp
cc1/src/codegen/: amd64.cpp  z80.cpp
cc1/src/lexer/: lexer.cpp
cc1/src/parser/: parser.cpp
cc1/test/: hex.s  start.c  start.s  zeal.s
cc1/tests/conformance/: README.md  invalid_empty_char_literal.c  invalid_missing_brace.c  invalid_missing_semicolon.c  invalid_unterminated_string.c  invalid_void_return_value.c  run_test.sh  unsupported_array.c  unsupported_binary_operator.c  unsupported_if_statement.c  unsupported_while_loop.c  valid_basic_function.c  valid_char_literals.c  valid_dereference.c  valid_function_call.c  valid_function_params.c  valid_multiple_declarations.c  valid_postfix_inc.c  valid_prototype.c  valid_string_literal.c  valid_void_function.c
cparse/: CMakeLists.txt  lexer.cpp  parser.cpp
cparse/include/cparse/: ast.hpp  error.hpp  lexer.hpp  parser.hpp  source_position.hpp  token.hpp  visitor.hpp
development/compiler-debugging/: index.html
docs/: abi.md  calling-convention.md  conversion.html  index.md  mkdocs.yml
docs/abi/: stack-layout.md
docs/compiler/: c90.md
docs/development/: compiler-debugging.md
example/: README.md  hello.c  link.ld  sys.s
langkit/: CMakeLists.txt  README.md
langkit/include/langkit/: lexer.hpp
libzobj/: CMakeLists.txt  README.md
libzobj/include/: zobj.h
libzobj/include/zobj/: exec.h  reloc.h  strtab.h  symbol.h
libzobj/src/: exec.c  reloc.c  strtab.c  symbol.c
search/: search_index.json
src/: CMakeLists.txt  ez80-binutils.cmake  sdcc-binutils.cmake  z80-binutils.cmake  zdk-sdcc
src/backend/: CMakeLists.txt  allocator.cpp  asm_printer.cpp  register_allocator.cpp  target_registry.cpp
src/backend/include/backend/: allocation.hpp  allocator.hpp  asm_printer.hpp  machine_function.hpp  machine_instruction.hpp  machine_operand.hpp  ralloc.hpp  target.hpp  target_codegen.hpp  target_registry.hpp
src/backend/targets/z80/: codegen.cpp  codegen.hpp  target.cpp  target.hpp
src/cc/: C.g4  CMakeLists.txt  analyzer.cpp  asm_printer.cpp  ast_emitter.cpp  codegen.cpp  config.hpp.in  error.cpp  expr.c  expressions.cpp  frontend_action.cpp  frontend_manager.cpp  interp.c  irgen.cpp  lexer.c  lexer.cpp  main.c  main.cpp  parser.cpp  register_allocator.cpp  scan.c  symtab.cpp  tree.c  types.cpp  z80.cpp
src/cc/include/: analyzer.hpp  asm_printer.hpp  ast.hpp  ast_emitter.hpp  codegen.hpp  data.h  decl.h  defs.h  error.hpp  frontend_action.hpp  frontend_context.hpp  frontendaction.hpp  frotnend_manager.hpp  irgen.hpp  lexer.h  lexer.hpp  parser.hpp  positional.hpp  register_allocator.hpp  symtab.hpp  token.h  type.hpp  types.hpp  z80.hpp
src/cc/src/: main.cpp
src/ez80-wrapper/: CMakeLists.txt  main.cpp
src/libc/: CMakeLists.txt  Makefile  stubs.s
src/libc/include/: stdio.h  stdlib.h
src/libc/src/: call_ptr.s  math.s  start.s  stdarg.h  stdio.c  stdio.h  stdio.s  stdlib.s  stub.s  stubs.s
src/llc/: CMakeLists.txt  allocator.cpp  analyzer.cpp  codegen.cpp  compiler.cpp  ir_visitor.cpp  linear_scan_allocator.cpp  liveness_analyzer.cpp  main.cpp  z80.cpp
src/llc/include/: allocator.hpp  analyzer.hpp  codegen.hpp  compiler.hpp  ir_visitor.hpp  legalizer.hpp  linear_scan_allocator.hpp  liveness_analyzer.hpp  z80.hpp
src/sdcc-wrapper/: CMakeLists.txt  main.cpp
src/targets/cpm/: CMakeLists.txt  cpm.ld  crt0.s  io.s
src/test/: Makefile  link.ld
src/test/src/: crt0.s  io.s  main.c
src/zir/: CMakeLists.txt  README.md  instruction.cpp  module.cpp
src/zir/include/zir/: instruction.hpp  module.hpp
src/zpc/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_amd64.sh  test_conformance.sh  test_z80.sh
